# x3plus_description

./: .gitignore  CMakeLists.txt  README.md  package.xml  x3plus_description.yaml
config/: x3plus_description.rviz
launch/: display_Xacro.launch.py
meshes/X3plus/visual/: back_right_wheel.STL  front_right_wheel.STL
urdf/: yahboomcar_X3plus.urdf.xacro  yahboomcar_X3plusX.urdf - Kopie.xacro  yahboomcar_X3plusX.urdf.xacro
x3plus_description/: package.xml
x3plus_description/urdf/: yahboomcar_X3plus.urdf
x3plus_description/urdf/yahboomcar_X3plus/: yahboomcar_X3plus.usd
yahboomcar_base_node/: CMakeLists.txt
yahboomcar_base_node/src/: base_node_X3Plus.cpp
yahboomcar_bringup/: package.xml  setup.py
yahboomcar_bringup/launch/: yahboomcar_bringup_X3Plus_launch.py
yahboomcar_bringup/param/: ekf.yaml
yahboomcar_bringup/scripts/: Mcnamu_X3plus.py
yahboomcar_bringup/yahboomcar_bringup/: Mcnamu_X3plus.py  Mcnamu_driver_X3.py
