<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>x3plus_description</name>
  <version>0.0.1</version>
  <description>Roboter description for X3 Plus</description>
  <maintainer email="cord.burmeister@live.de">marvin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>joint_state_publisher_gui</depend>

  <depend>xacro</depend>
  <!-- It is also good practice to add a dependency to ros2launch to the package.xml file of your package: -->
  <exec_depend>ros2launch</exec_depend>
	
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
